--- a/src/components/Filters/Filters.scss
+++ b/src/components/Filters/Filters.scss
@@ -1,11 +1,4 @@
 .filters{
-    
-background: #FFFFFF;
-box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
-border-radius: 5px;
-}
-
-aside{
     width: 232px;
     height: 252px;
     padding: 20px;
@@ -13,7 +6,8 @@ aside{
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
 }
-.checkbox{
+
+.ant-checkbox-group{
     display: flex;
     flex-direction: column;
     font-weight: 400;
@@ -25,7 +19,6 @@ aside{
     padding: 10px 0 10px 20px;
    
 }
-
 .ant-checkbox-wrapper+.ant-checkbox-wrapper{
     margin-inline-start: 0;
 }
