--- a/src/components/Ticket/Ticket.module.scss
+++ b/src/components/Ticket/Ticket.module.scss
@@ -1,5 +1,4 @@
 .card{
-
     width:502px ;
     height: 184px;
     background: #FFFFFF;
@@ -14,27 +13,25 @@
     justify-content: space-between;
 }
 
-.head .ant-typography{
+.head span{
     font-size: 24px;
     line-height: 24px;
     color: #2196F3;
 }
 
-table{
-   
+table {
+    width: 100%;
     font-size: 14px;
     line-height: 21px;
     
-} td{
-
-}
+} 
 thead tr{
     color: #A0B0B9;
     align-items: center;
-letter-spacing: 0.5px;
-text-transform: uppercase;
-font-weight: 600;
-font-size: 12px;
-line-height: 18px;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 18px;
 }
 
