set eslint and husky

--- a/src/components/Filters/Filters.scss
+++ b/src/components/Filters/Filters.scss
@@ -7,6 +7,10 @@
     border-radius: 5px;
 }
 
+/*.checkbox:hover{
+    background-color: #F1FCFF;
+} */
+
 .ant-checkbox-group{
     display: flex;
     flex-direction: column;
