--- a/src/components/Ticket/Ticket.module.scss
+++ b/src/components/Ticket/Ticket.module.scss
@@ -25,6 +25,9 @@ table {
     line-height: 21px;
     
 } 
+td:nth-child(2), th:nth-child(2){
+    padding:0 20px ;
+}
 thead tr{
     color: #A0B0B9;
     align-items: center;
