--- a/src/components/Ticket/Ticket.module.scss
+++ b/src/components/Ticket/Ticket.module.scss
@@ -7,6 +7,22 @@
     padding: 20px;
 }
 
+@media (min-width: 800px ) {
+    .card{
+        width:502px ;
+        height: 184px;
+        padding: 20px;
+    }
+}
+
+@media (max-width: 800px ) {
+    .card{
+        width:100%;
+        height: 184px;
+        padding: 20px;
+    }
+}
+
 .head{
     display: flex;
     margin-bottom: 26px;
