--- a/src/components/Ticket/Ticket.module.scss
+++ b/src/components/Ticket/Ticket.module.scss
@@ -44,7 +44,7 @@ table {
 td:nth-child(2), th:nth-child(2){
     padding:0 20px ;
 }
-thead tr{
+thead th{
     color: #A0B0B9;
     align-items: center;
     letter-spacing: 0.5px;
