--- a/src/components/Filters/Filters.module.scss
+++ b/src/components/Filters/Filters.module.scss
@@ -1,114 +1,112 @@
-.filters{
-    background: #FFFFFF;
-    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
-}
- .toggle {
-    text-align: center;
-    height: auto;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    margin: auto 0;
-    border: none;
-    -webkit-appearance: none;
-    appearance: none;
-    cursor: pointer;
-}
+$color_1:#F1FCFF;
+$color_2: #4A4A4A;
+$color_3:#FFFFFF;
 
+.filters {
+	background: $color_3;
+	box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+	border-radius: 5px;
+	h6 {
+		font-weight: 600;
+		font-size: 12px;
+		text-transform: uppercase;
+		color: $color_2;
+	}
+}
 .toggle {
-    opacity: 0;
+	text-align: center;
+	height: auto;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	margin: auto 0;
+	border: none;
+	-webkit-appearance: none;
+	appearance: none;
+	cursor: pointer;
+	opacity: 0;
+	+ {
+		label {
+			background-image: url('./Form.svg');
+			background-repeat: no-repeat;
+			background-position: center left;
+		}
+	}
+	&:checked {
+		+ {
+			label {
+				background-image: url('./Checkbox.svg');
+			}
+		}
+	}
 }
-
-.toggle + label {
-    background-image: url('./Form.svg');
-    background-repeat: no-repeat;
-    background-position: center left;
+.item {
+	label {
+		padding-left: 30px;
+	}
 }
-
-.toggle:checked + label {
-    background-image: url('./Checkbox.svg');
-} 
-.item label{
-    padding-left: 30px;
-}
-
-.filters h6{
-    font-weight: 600;
-    font-size: 12px;
-    text-transform: uppercase;
-    color: #4A4A4A;
+.checkbox-wrapper {
+	&:hover {
+		background-color: $color_1;
+	}
 }
 @media (min-width: 801px ) {
-    .filters{
-        width: 232px;
-        height: 252px;
-        padding: 20px 0;
-    }
-    .filters h6{
-        padding-left: 20px;
-        margin-bottom: 10px;
-    }
-    .checkbox{
-        display: flex;
-        flex-direction: column;
-        font-weight: 400;
-        font-size: 13px;
-    }
-    .item{
-        width: 232px;
-        height: 40px;
-        padding: 10px 20px ; 
-    }
-    
+	.filters {
+		width: 232px;
+		height: 252px;
+		padding: 20px 0;
+		h6 {
+			padding-left: 20px;
+			margin-bottom: 10px;
+		}
+	}
+	.checkbox {
+		display: flex;
+		flex-direction: column;
+		font-weight: 400;
+		font-size: 13px;
+	}
+	.item {
+		width: 232px;
+		height: 40px;
+		padding: 10px 20px;
+	}
 }
 @media (min-width: 550px) and (max-width: 800px ) {
-    .filters{
-        width: 100%;
-        padding: 20px;
-    }
-    .checkbox{
-        display: flex;
-        font-weight: 400;
-        font-size: 10px;
-        padding-bottom: 10px;
-    }
-    .item{
-        width: 100%;
-        height: 30px;
-        padding: 10px 0 ;
-    }
-    
+	.filters {
+		width: 100%;
+		padding: 20px;
+	}
+	.checkbox {
+		display: flex;
+		font-weight: 400;
+		font-size: 10px;
+		padding-bottom: 10px;
+	}
+	.item {
+		width: 100%;
+		height: 30px;
+		padding: 10px 0;
+	}
 }
-
 @media (max-width: 549px ) {
-    .filters{
-        width: 100%;
-        height: 252px;
-        padding: 20px 0;
-    }
-
-    .filters h6{
-        padding-left: 20px;
-        margin-bottom: 10px;
-    }
-
-    .checkbox{
-        display: flex;
-        flex-direction: column;
-        font-weight: 400;
-    }
-    .item{
-        width: 100%;
-        height: 40px;
-        padding: 10px 20px ;
-    }
+	.filters {
+		width: 100%;
+		height: 252px;
+		padding: 20px 0;
+		h6 {
+			padding-left: 20px;
+			margin-bottom: 10px;
+		}
+	}
+	.checkbox {
+		display: flex;
+		flex-direction: column;
+		font-weight: 400;
+	}
+	.item {
+		width: 100%;
+		height: 40px;
+		padding: 10px 20px;
+	}
 }
-
-
-
-
-.checkbox-wrapper:hover{
-    background-color: #F1FCFF;
-} 
-
