--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -21,9 +21,18 @@ button {
 @media (min-width: 800px ) {
 	.container {
 		padding: 50px 103px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	.content{
+		display: flex;
+		gap: 20px;
+
 	}
 	.main {
 		display: flex;
+		flex-direction: column;
 		justify-content: center;
 		gap: 20px;
 	}
