add tab filtering

--- a/src/components/Ticket/Ticket.module.scss
+++ b/src/components/Ticket/Ticket.module.scss
@@ -12,6 +12,7 @@ $color_7: #A0B0B9;
 }
 .head {
 	display: flex;
+	align-items: center;
 	margin-bottom: 26px;
 	justify-content: space-between;
 	span {
