--- a/src/components/Filters/Filters.module.scss
+++ b/src/components/Filters/Filters.module.scss
@@ -77,17 +77,25 @@ $color_3:#FFFFFF;
 	.filters {
 		width: 100%;
 		padding: 20px;
+		margin-bottom: 20px;
 	}
 	.checkbox {
 		display: flex;
+		justify-content: space-between;
 		font-weight: 400;
-		font-size: 10px;
+		font-size: 12px;
 		padding-bottom: 10px;
 	}
 	.item {
-		width: 100%;
-		height: 30px;
-		padding: 10px 0;
+		label {
+			height: 30px;
+			padding-top: 7px;
+		}
+	}
+
+	.item {
+		height: 40px;
+		padding: 10px 5px 10px 0;
 	}
 }
 @media (max-width: 549px ) {
@@ -95,6 +103,7 @@ $color_3:#FFFFFF;
 		width: 100%;
 		height: 252px;
 		padding: 20px 0;
+		margin-bottom: 20px;
 		h6 {
 			padding-left: 20px;
 			margin-bottom: 10px;
@@ -105,6 +114,7 @@ $color_3:#FFFFFF;
 		flex-direction: column;
 		font-weight: 400;
 	}
+	
 	.item {
 		width: 100%;
 		height: 40px;
