set transfers filter

--- a/src/components/TicketsList/TicketsList.module.scss
+++ b/src/components/TicketsList/TicketsList.module.scss
@@ -4,3 +4,9 @@
     gap:30px;
     padding: 0;
 }
+.text{
+    color:#007bff;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+}
